--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ packages = [{include = "fastapi-learn"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-requests = "^2.31.0"
 uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 fastapi = "^0.105.0"
 black = "^23.12.0"
+sqlalchemy = "^2.0.23"
+pymysql = "^1.1.0"
 
 
 [build-system]
