--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ fastapi = "^0.105.0"
 black = "^23.12.0"
 sqlalchemy = "^2.0.23"
 pymysql = "^1.1.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.6"
 
 
 [build-system]
