--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pymysql = "^1.1.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
+alembic = "^1.13.2"
 
 
 [build-system]
