--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
 alembic = "^1.13.2"
+pytest = "^8.3.2"
 
 
 [build-system]
