--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 python-multipart = "^0.0.6"
 alembic = "^1.13.2"
 pytest = "^8.3.2"
+httpx = "^0.27.2"
 
 
 [build-system]
