--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ pytest = "^8.3.2"
 httpx = "^0.27.2"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
